deploy: 15a28f73cd54067b131f99ca74114b276ad78768

--- a/about_me.html
+++ b/about_me.html
@@ -269,8 +269,9 @@
 <li><p>2022 - 2026 (expected)</p></li>
 <li><p>Minor in Mathematics</p></li>
 <li><p>GPA: 4.58/5 (First Class Honours)</p></li>
-<li><p>Academic Year 2022/2023 Semester 1 Deans’ List</p></li>
+<li><p>Academic Year 2022/2023 Semester 1 Dean’s List</p></li>
 <li><p>Academic Year 2023/2024 Honour List of Student Tutors</p></li>
+<li><p>Academic Year 2024/2025 Semester 2 Dean’s List</p></li>
 </ul>
 </section>
 <section id="chong-hwa-independent-high-school-kuala-lumpur">
