--- a/blogs/index.html
+++ b/blogs/index.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=8f2a1f02" />
     <link rel="stylesheet" type="text/css" href="../_static/styles/furo.css?v=354aac6f" />
     <link rel="stylesheet" type="text/css" href="../_static/styles/furo-extensions.css?v=302659d7" />
-    <link rel="stylesheet" type="text/css" href="../_static/custom.css?v=69526beb" />
+    <link rel="stylesheet" type="text/css" href="../_static/custom.css?v=9aabcc79" />
     
     
 
@@ -261,34 +261,42 @@
   <a href="nus-cs-course-reviews-part-1/index.html" class="card">
     <h3>NUS CS Course Reviews Part 1</h3>
     <p>Review on CS1231S, CS2030S and CS2040S.</p>
+    <span class="card-date">Published on July 13, 2024</span>
   </a>
   <a href="nus-cs-course-reviews-part-2/index.html" class="card">
     <h3>NUS CS Course Reviews Part 2</h3>
     <p>Review on CS2100, CS2101 and CS2103T.</p>
+    <span class="card-date">Published on July 17, 2024</span>
   </a>
   <a href="nus-cs-course-reviews-part-3/index.html" class="card">
     <h3>NUS CS Course Reviews Part 3</h3>
     <p>Review on CS2106, CS2109S, CS3230.</p>
+    <span class="card-date">Published on August 9, 2024</span>
   </a>
   <a href="my-year-2-summer-internship-experience/index.html" class="card">
     <h3>My Year 2 Summer Internship Experience</h3>
     <p>A mix of NLP Research and Software Engineering.</p>
+    <span class="card-date">Published on August 14, 2024</span>
   </a>
   <a href="on-learning-and-teaching-mathematics/index.html" class="card">
     <h3>On Learning and Teaching Mathematics</h3>
-    <p>My Essay Submission for <i>EL1101E The Nature of Language</i></p>
+    <p>My Essay Submission for <i>EL1101E The Nature of Language</i>.</p>
+    <span class="card-date">Published on December 15, 2024</span>
   </a>
   <a href="nus-cs-course-reviews-part-3a/index.html" class="card">
     <h3>NUS CS Course Reviews Part 3A</h3>
-    <p>Review on CS3231 and CS4234</p>
+    <p>Review on CS3231 and CS4234.</p>
+    <span class="card-date">Published on December 16, 2024</span>
   </a>
   <a href="nus-cs-course-reviews-part-5/index.html" class="card">
     <h3>NUS CS Course Reviews Part 5</h3>
-    <p>Review on CS3236 and CS5230</p>
+    <p>Review on CS3236 and CS5230.</p>
+    <span class="card-date">Published on May 20, 2025</span>
   </a>
   <a href="recap-on-ay24-25-semester-2/index.html" class="card">
     <h3>Recap on AY24/25 Semester 2</h3>
     <p>An overview of my commitments and some remarks for the semester.</p>
+    <span class="card-date">Published on June 22, 2025</span>
   </a>
 </div></section>
 
