--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="_static/styles/furo.css?v=354aac6f" />
     <link rel="stylesheet" type="text/css" href="_static/styles/furo-extensions.css?v=302659d7" />
     <link rel="stylesheet" type="text/css" href="_static/card-grid.css?v=9aabcc79" />
-    <link rel="stylesheet" type="text/css" href="_static/contact-list.css?v=652eeaf7" />
+    <link rel="stylesheet" type="text/css" href="_static/contact-list.css?v=86a06382" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/fontawesome.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/solid.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css" />
@@ -268,11 +268,11 @@
     </div>
     <div class="contact-item">
         <i class="fab fa-linkedin"></i>
-        <a href="https://linkedin.com/in/chong-chin-herng" target="_blank">linkedin.com/in/chong-chin-herng</a>
+        <a href="https://linkedin.com/in/chong-chin-herng" target="_blank">Chong Chin Herng</a>
     </div>
     <div class="contact-item">
         <i class="fab fa-github"></i>
-        <a href="https://github.com/chin-herng" target="_blank">github.com/chin-herng</a>
+        <a href="https://github.com/chin-herng" target="_blank">chin-herng</a>
     </div>
     <div class="contact-item">
         <i class="fab fa-instagram"></i>
