deploy: f42c4f25e18d1cb2f9e1caf94ec968ced0f1f047

--- a/blogs/nus-cs-course-reviews-part-5/index.html
+++ b/blogs/nus-cs-course-reviews-part-5/index.html
@@ -325,7 +325,7 @@
 <li><p>Models of computation and the asymptotic notation</p></li>
 <li><p>Different complexity measures and hierarchy, diagonalization</p></li>
 <li><p><span class="math notranslate nohighlight">\(\text{LOGSPACE}\)</span> and its relation to <span class="math notranslate nohighlight">\(\text{P}\)</span></p></li>
-<li><p><span class="math notranslate nohighlight">\(\text{NLOGSPACE}\)</span>, <span class="math notranslate nohighlight">\(\text{ALOGSPACE}\)</span>, <span class="math notranslate nohighlight">\(\text{ALOGSPACE}\)</span>, <span class="math notranslate nohighlight">\(\text{NC}\)</span> and Savitch’s theorem</p></li>
+<li><p><span class="math notranslate nohighlight">\(\text{NLOGSPACE}\)</span>, <span class="math notranslate nohighlight">\(\text{ALOGSPACE}\)</span>, <span class="math notranslate nohighlight">\(\text{POLYLOGSPACE}\)</span>, <span class="math notranslate nohighlight">\(\text{NC}\)</span> and Savitch’s theorem</p></li>
 <li><p><span class="math notranslate nohighlight">\(\text{LINSPACE}\)</span>, <span class="math notranslate nohighlight">\(\text{NLINSPACE}\)</span>, <span class="math notranslate nohighlight">\(\text{CSL}\)</span> and the LBA problems</p></li>
 <li><p><span class="math notranslate nohighlight">\(\text{P}\)</span>, <span class="math notranslate nohighlight">\(\text{NP}\)</span>, <span class="math notranslate nohighlight">\(\text{coNP}\)</span> and <span class="math notranslate nohighlight">\(\text{NP}\)</span>-complete problems</p></li>
 <li><p>DPLL algorithms in <span class="math notranslate nohighlight">\(\text{EXP}\)</span> and/or <span class="math notranslate nohighlight">\(\text{EXPSPACE}\)</span>, the Exponential Time Hypothesis (ETH)</p></li>
