deploy: 38383c6826b882858d265513af242ab3724430ba

--- a/blogs/nus-cs-course-reviews-part-5/index.html
+++ b/blogs/nus-cs-course-reviews-part-5/index.html
@@ -332,7 +332,7 @@
 <li><p><span class="math notranslate nohighlight">\(\text{RP}\)</span>, <span class="math notranslate nohighlight">\(\text{PP}\)</span>, <span class="math notranslate nohighlight">\(\text{BPP}\)</span>, the Valiant-Vazirani theorem and the complexity of counting</p></li>
 <li><p>Conditional lower bounds for problems in <span class="math notranslate nohighlight">\(\text{P}\)</span></p></li>
 <li><p>The complexity of multiplication and matrix multiplication, nondeterministic deciders</p></li>
-<li><p>The Poylnomial hierarchy and <span class="math notranslate nohighlight">\(\text{AP} = \text{PSPACE}\)</span></p></li>
+<li><p>The Polynomial hierarchy and <span class="math notranslate nohighlight">\(\text{AP} = \text{PSPACE}\)</span></p></li>
 <li><p><span class="math notranslate nohighlight">\(\text{PSPACE}\)</span> and beyond</p></li>
 </ol>
 <p>Seeing the different complexity classes and the relations between them makes me appreciate complexity theory as a subject that essentially classifies computational problems, or puzzles, into hierarchies of computational hardness. Some puzzles are easy to solve, like finding a certain element in a list. Some are hard to solve, but it is easy to verify a proposed solution, like sudoku. Are these two classes of puzzles the same? Some puzzles are not only hard to solve, but also hard to verify a proposed solution, like chess. If given a certain configuration on the chess board someone makes a move and claims that it is optimal, how do we know whether they’re right?</p>
