deploy: caaa34495e977d5df6005e55fb0d250500dbf6ac

--- a/teaching.html
+++ b/teaching.html
@@ -309,6 +309,16 @@
 </tr>
 </thead>
 <tbody>
+<tr class="row-even"><td><p>AY2025/26 S1</p></td>
+<td><p>CS2040S Data Structures and Algorithms</p></td>
+<td><p>4.8/5.0</p></td>
+<td><p>13/24 (54%)</p></td>
+</tr>
+<tr class="row-odd"><td><p>AY2025/26 S1</p></td>
+<td><p>CS1231S Discrete Structures</p></td>
+<td><p>4.6/5.0</p></td>
+<td><p>9/18 (50%)</p></td>
+</tr>
 <tr class="row-even"><td><p>AY2024/25 S2</p></td>
 <td><p>CS2040S Data Structures and Algorithms</p></td>
 <td><p>5.0/5.0</p></td>
