--- a/about_me.html
+++ b/about_me.html
@@ -235,7 +235,7 @@
 <li><p>Academic Year 2022/2023 Semester 1 Dean’s List</p></li>
 <li><p>Academic Year 2023/2024 Honour List of Student Tutors</p></li>
 <li><p>Academic Year 2024/2025 Semester 2 Dean’s List</p></li>
-<li><p>Academic Yaer 2024/2025 Honour List of Student Tutors</p></li>
+<li><p>Academic Year 2024/2025 Honour List of Student Tutors</p></li>
 </ul>
 </section>
 <section id="chong-hwa-independent-high-school-kuala-lumpur">
